Tarea 2, simulador de suma de productos

--- a/Pruebas/index.html
+++ b/Pruebas/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="tarea.js" ></script>
+    <script src="tarea2.js" ></script>
 
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola Gustavo, el mejor tutor de todos!</h1>
+    <h1>Hola <p style= "text-decoration: line-through ; display: inline-block; ">Gustavo</p> Luis Herrera!, el mejor tutor de todos!</h1>
 
     <p>Pongame 10 por favor xD</p>
 </body>
