Desafío: Incorporar eventos terminado

--- a/Tareas/productos.html
+++ b/Tareas/productos.html
@@ -64,8 +64,9 @@
                         </ul>
                     </div>
 
-                    <div id="popUp__total">
+                    <div class="popUp__total" id="popUp__total">
                         <p>Total:</p>
+                        <p class="popUp__total-number" id="popUp__total-number">0</p>
                         
                     </div>
             
