--- a/pages/productos.html
+++ b/pages/productos.html
@@ -34,6 +34,10 @@
       crossorigin="anonymous"
     ></script>
 
+
+    <!-- SweetAlert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
     <script defer src="../index.js"></script>
 
     <title>Ryzer Gaming - productos</title>
