--- a/pages/productos.html
+++ b/pages/productos.html
@@ -34,10 +34,9 @@
       crossorigin="anonymous"
     ></script>
 
-
     <!-- SweetAlert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    
+
     <script defer src="../index.js"></script>
 
     <title>Ryzer Gaming - productos</title>
@@ -121,133 +120,7 @@
               </ul>
             </div>
 
-            <div class="mt-3 col-md-9 tabla__productos">
-              <div
-                class="m-3 card text-center border-4 border-warning col-md-3 caja__producto"
-              >
-                <img src="../images/productos/i3.jpg" alt="inteli3" />
-
-                <div class="card-body">
-                  <h5>Intel Core i3 10100f 4.3Ghz</h5>
-
-                  <h3 class="card-text">$16.500</h3>
-                  <p class="card-text">12 Cuotas sin Interés</p>
-
-                  <button
-                    type="button"
-                    id="botonCompra1"
-                    class="btn btn-primary"
-                  >
-                    Comprar
-                  </button>
-                </div>
-              </div>
-
-              <div
-                class="m-3 card text-center border-4 border-warning col-md-3"
-              >
-                <img src="../images/productos/i5.jpg" alt="inteli5" />
-
-                <div class="card-body">
-                  <h5>Intel Core i5 10600kf 4.1Ghz</h5>
-
-                  <h3 class="card-text">$33.800</h3>
-                  <p class="card-text">12 Cuotas sin Interés</p>
-
-                  <button
-                    type="button"
-                    id="botonCompra2"
-                    class="btn btn-primary"
-                  >
-                    Comprar
-                  </button>
-                </div>
-              </div>
-
-              <div
-                class="m-3 card text-center border-4 border-warning col-md-3"
-              >
-                <img src="../images/productos/Ryzen 7.jpg" alt="ryzen7" />
-
-                <div class="card-body">
-                  <h5>AMD Ryzen 7 5700x 4.6 Ghz</h5>
-
-                  <h3 class="card-text">$57.000</h3>
-                  <p class="card-text">12 Cuotas sin Interés</p>
-
-                  <button
-                    type="button"
-                    id="botonCompra3"
-                    class="btn btn-primary"
-                  >
-                    Comprar
-                  </button>
-                </div>
-              </div>
-
-              <div
-                class="m-3 card text-center border-4 border-warning col-md-3"
-              >
-                <img src="../images/productos/Ryzen 3.jpg" alt="ryzen3" />
-
-                <div class="card-body">
-                  <h5>AMD Ryzen 3 3200g 3.6 Ghz</h5>
-
-                  <h3 class="card-text">$35.500</h3>
-                  <p class="card-text">12 Cuotas sin Interés</p>
-
-                  <button
-                    type="button"
-                    id="botonCompra4"
-                    class="btn btn-primary"
-                  >
-                    Comprar
-                  </button>
-                </div>
-              </div>
-
-              <div
-                class="m-3 card text-center border-4 border-warning col-md-3"
-              >
-                <img src="../images/productos/Ryzen 7.jpg" alt="ryzen7" />
-
-                <div class="card-body">
-                  <h5>AMD Ryzen 7 5700x 4.6 Ghz</h5>
-
-                  <h3 class="card-text">$57.000</h3>
-                  <p class="card-text">12 Cuotas sin Interés</p>
-
-                  <button
-                    type="button"
-                    id="botonCompra5"
-                    class="btn btn-primary"
-                  >
-                    Comprar
-                  </button>
-                </div>
-              </div>
-
-              <div
-                class="m-3 card text-center border-4 border-warning col-md-3"
-              >
-                <img src="../images/productos/i3.jpg" alt="inteli3" />
-
-                <div class="card-body">
-                  <h5>Intel Core i3 10100f 4.3Ghz</h5>
-
-                  <h3 class="card-text">$16.500</h3>
-                  <p class="card-text">12 Cuotas sin Interés</p>
-
-                  <button
-                    type="button"
-                    id="botonCompra6"
-                    class="btn btn-primary"
-                  >
-                    Comprar
-                  </button>
-                </div>
-              </div>
-            </div>
+            <div class="mt-3 col-md-9 tabla__productos" id="cards"></div>
           </div>
         </div>
       </section>
