--- a/pages/productos.html
+++ b/pages/productos.html
@@ -111,12 +111,12 @@
               class="mt-5 col-md-3 border-end border-dark border-3 lista__productos"
             >
               <ul>
-                <li>Monitores</li>
-                <li>Procesadores</li>
-                <li>Memorias</li>
-                <li>Almacenamiento</li>
-                <li>Gabinetes</li>
-                <li>PC Armadas</li>
+                <li><a href="#">Monitores</a></li>
+                <li><a href="#">Procesadores</a></li>
+                <li><a href="#">Memorias</a></li>
+                <li><a href="#">Almacenamiento</a></li>
+                <li><a href="#">Gabinetes</a></li>
+                <li><a href="#">Perifericos</a></li>
               </ul>
             </div>
 
